Updating index file

--- a/index.html
+++ b/index.html
@@ -4,27 +4,42 @@
 <head>
   <meta charset="utf-8">
   <title>Erick's PERSONAL SITE</title>
+  
+  <style>
+		body{background-color: #EAF6F6"
+		}
+		
+		hr{
+		border-style: none;
+		border-top-style: dotted;
+		border-width: 10px;
+		border-color:gray;
+		width:5%;
+		}
+  
+  </style>
+  
 </head>
 
 <body>
   <table>
     <tr>
-      <td><img src="1642257230192.jpg" alt="ISHIKA'S PROFILE"></td>
-      <td><h1>ISHIKA KHERALIA</h1>
+      <td><img src="1642257230192.jpg" alt="Erick's profile"></td>
+      <td><h1>Erick Reyes</h1>
         <p><em><a href="https://en.wikipedia.org/wiki/Web_developer">Web Developer</a>
             <br>
-          <a href="https://www.coursera.org/articles/what-is-a-data-scientist">Data scientist</a>
+          <a href="https://www.coursera.org/articles/what-is-a-data-scientist">iOS / Android Developer</a>
             <br>
           <a href="https://en.wikipedia.org/wiki/Blogger_(service)">Blogger</a>
           <br>
           <a href="https://en.wikipedia.org/wiki/Public_speaking">Public speaker</a></em></p>
-        <p>I am a medical student who found her desire in web development,coding and data science.These skills are very creative and exciting. </p></td>
+        <p>I am an IT professional who interested in Web DEvelopment and Mobile Apps. Also interested in everything related with emerging technologies such as ML and IoT. </p></td>
     </tr>
   </table>
 <hr>
   <h3>Education</h3>
   <ul>
-    <li>Completed higher education from K.V Jakhoo Hills Shimla</li>
+    <li>Completed higher education from USO as a Computing Systems Engineer</li>
     <li>Coaching of NEET from Private Institute</li>
     <li><a href="https://www.udemy.com/?utm_source=adwords-brand&utm_medium=udemyads&utm_campaign=Brand-Udemy_la.EN_cc.INDIA&utm_term=_._ag_78279294239_._ad_533220805580_._de_c_._dm__._pl__._ti_kwd-310556426868_._li_9040167_._pd__._&utm_term=_._pd__._kw_udemy_._&matchtype=e&gclid=CjwKCAiA_omPBhBBEiwAcg7smW1RQtUvcQxZp59h-GTVkoGuZI53yUU-ten5jaVEZVcAgcvKZ8QDsBoCGRMQAvD_BwE">Web DEvelopment Course</a></li>
     <li>Data Science Course</li>
@@ -39,12 +54,12 @@
       </tr>
     </thead>
     <tr>
-      <td>2019-2020</td>
-      <td>Coaching from Private Institute</td>
+      <td>2015-2019</td>
+      <td>Customer Service Rep</td>
     </tr>
     <tr>
-      <td>2020-2022</td>
-      <td>Online learning soft skills</td>
+      <td>2019-2022</td>
+      <td>IT Support</td>
     </tr>
   </table>
   <hr>
@@ -57,7 +72,7 @@
           ✔✔✔
         </td>
         <td>
-          Playing badminton
+          Playing Videogames
           ✔✔✔✔✔
         </td>
        </tr>
@@ -67,12 +82,15 @@
           ✔✔✔✔
         </td>
         <td>
-          Public_speaking
+          Cooking
           ✔✔✔
         </td>
        </tr>
        </tbody>
-  <a href="hobbies.html">My Hobbies</a>
-  <a href="contact-me.html">My Contact Details</a>
+ 
 </body>
+<footer>
+ <a href="hobbies.html">My Hobbies</a>
+  <a href="contact-me.html">My Contact Details</a>
+  </footer>
 </html>
